--- a/nginx.conf
+++ b/nginx.conf
@@ -45,9 +45,9 @@ http {
 
         # Uncomment these lines to enable SSL.
         # Update the ssl paths with your own certificate and private key.
-        # listen 443 ssl;
-        # ssl_certificate     /opt/certs/example.com.crt;
-        # ssl_certificate_key /opt/certs/example.com.key;
+        listen 443 ssl;
+        ssl_certificate     /opt/certs/stream.riz-om.net.crt;
+        ssl_certificate_key /opt/certs/strean.riz-om.net.key;
 
         location /hls {
             types {
