--- a/nginx.conf
+++ b/nginx.conf
@@ -46,8 +46,8 @@ http {
         # Uncomment these lines to enable SSL.
         # Update the ssl paths with your own certificate and private key.
         listen 443 ssl;
-        ssl_certificate     /opt/certs/stream.riz-om.net.crt;
-        ssl_certificate_key /opt/certs/strean.riz-om.net.key;
+        ssl_certificate     /etc/letsencrypt/live/stream.riz-om.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/stream.riz-om.net/privkey.pem;
 
         location /hls {
             types {
